# x_vit

./: .gitignore  .gitmodules  README.md  Taskfile.yaml  jupytext.toml  pyproject.toml  requirements.txt
notebooks/: CrossViT.py  cid.py  constants.py
src/x_vit/: crossvit.py  utils.py  vit.py
src/x_vit/scripts/: train.py
